# ot-harjoitustyo

./: .gitignore  README.md
poetry-testi/: pyproject.toml
spaghetti/: .coverage  .coveragerc  .pylintrc  pyproject.toml  tasks.py
spaghetti-master/: README.md  pyproject.toml  tasks.py
spaghetti-master/src/: level_1.py  spaghetti.py
spaghetti/htmlcov/: _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest___init___py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest__argcomplete_py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest__code___init___py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest__code_code_py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest__code_source_py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest__io___init___py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest__io_saferepr_py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest__io_terminalwriter_py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest__io_wcwidth_py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest__version_py.html  _Users_mazi_Library_Caches_pypoetry_virtualenvs_spaghetti-IqU3RQgi-py3_9_lib_python3_9_site-packages__pytest_assertion_util_py.html  (+148 more)
(+83 files in other folders)
