[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["Matias Enkovaara <matias.enkovaara@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
cowsay = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
