[tool.poetry]
name = "spaghetti-master"
version = "0.1.0"
description = ""
authors = ["Matias Enkovaara <matias.enkovaara@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
invoke = "^1.5.0"
pytest = "^6.2.3"
texteditor = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
